Replace resto.css with jeux.css in index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;link rel="icon" href="images/FPO.png" sizes="192x192"&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;link rel="apple-touch-icon" href="images/FPO.png"&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;link rel="manifest" href="manifest.json"&gt;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;link rel="stylesheet" href="resto.css"&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;link rel="stylesheet" href="jeux.css"&gt;</span></p>
 <p class="p1"><span class="s1">&lt;/head&gt;</span></p>
 <p class="p2"><span class="s1"><br>
 </span></p>
