Change stylesheet link from resto.css to jeux.css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="icon" href="images/FPO.png" sizes="192x192">
   <link rel="apple-touch-icon" href="images/FPO.png">
   <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="resto.css">
+  <link rel="stylesheet" href="jeux.css">
 </head>
  
  
