Fix HTML formatting in index.html

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ Tombola
   <button class="moins" data-id="tombola5">-</button>
   <span class="quantite" data-id="tombola5" data-prix="3">0</span>
   <button class="plus" data-id="tombola5">+</button>
+  </div>
   
   
 <h2>Total : <span id="total">0</span> €</h2>
